k8s/istio/isto-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-research
  labels:
    istio-injection: enabled
