k8s/istio/peer-authentication-disable.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: microbank-mtls-strict
  namespace: student-research
spec:
  mtls:
    mode: DISABLE
